[tool.poetry]
name = "fastapi-security"
version = "0.1.0"
description = ""
authors = ["Thai-DTVT <thaisinh1181998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
jwt = "^1.3.1"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
